--- a/.travis.yml
+++ b/.travis.yml
@@ -1,52 +1,44 @@
 sudo: required
-dist: trusty
+dist: xenial
 
 services:
   - elasticsearch
-
-addons:
-  apt:
-    packages:
-    - mysql-server-5.6
-    - mysql-client-core-5.6
-    - mysql-client-5.6
-    - postfix
-    - oracle-java9-set-default
+  - mysql
 
 language: php
 
 jobs:
   include:
 # Elasticsearch 6
-    - php: 7.2
-      env:
-          - ES_VERSION=6.8.8 MAGENTO_VERSION=2.3.5-p1 MAGENTO_EDITION=community
-    - if: type != pull_request
-      php: 7.2
-      env:
-          - ES_VERSION=6.8.8 MAGENTO_VERSION=2.3.5-p1 MAGENTO_EDITION=enterprise
     - php: 7.3
       env:
-          - ES_VERSION=6.8.8 MAGENTO_VERSION=2.3.5-p1 MAGENTO_EDITION=community
+          - ES_VERSION=6.8.8 MAGENTO_VERSION=2.4.0 MAGENTO_EDITION=community
     - if: type != pull_request
       php: 7.3
       env:
-          - ES_VERSION=6.8.8 MAGENTO_VERSION=2.3.5-p1 MAGENTO_EDITION=enterprise
+          - ES_VERSION=6.8.8 MAGENTO_VERSION=2.4.0 MAGENTO_EDITION=enterprise
+    - php: 7.4
+      env:
+          - ES_VERSION=6.8.8 MAGENTO_VERSION=2.4.0 MAGENTO_EDITION=community
+    - if: type != pull_request
+      php: 7.4
+      env:
+          - ES_VERSION=6.8.8 MAGENTO_VERSION=2.4.0 MAGENTO_EDITION=enterprise
 # Elasticsearch 7
-    - php: 7.2
-      env:
-          - ES_VERSION=7.6.2-amd64 MAGENTO_VERSION=2.3.5-p1 MAGENTO_EDITION=community
-    - if: type != pull_request
-      php: 7.2
-      env:
-          - ES_VERSION=7.6.2-amd64 MAGENTO_VERSION=2.3.5-p1 MAGENTO_EDITION=enterprise
     - php: 7.3
       env:
-          - ES_VERSION=7.6.2-amd64 MAGENTO_VERSION=2.3.5-p1 MAGENTO_EDITION=community
+          - ES_VERSION=7.6.2-amd64 MAGENTO_VERSION=2.4.0 MAGENTO_EDITION=community
     - if: type != pull_request
       php: 7.3
       env:
-          - ES_VERSION=7.6.2-amd64 MAGENTO_VERSION=2.3.5-p1 MAGENTO_EDITION=enterprise
+          - ES_VERSION=7.6.2-amd64 MAGENTO_VERSION=2.4.0 MAGENTO_EDITION=enterprise
+    - php: 7.4
+      env:
+          - ES_VERSION=7.6.2-amd64 MAGENTO_VERSION=2.4.0 MAGENTO_EDITION=community
+    - if: type != pull_request
+      php: 7.4
+      env:
+          - ES_VERSION=7.6.2-amd64 MAGENTO_VERSION=2.4.0 MAGENTO_EDITION=enterprise
 
 before_install:
   - sudo service elasticsearch stop
