--- a/.travis.yml
+++ b/.travis.yml
@@ -76,7 +76,7 @@ script:
   - vendor/bin/phpcs --standard=vendor/magento/marketplace-eqp/MEQP2 --severity=9 src/
   - vendor/bin/phpcs --standard=vendor/smile/magento2-smilelab-phpcs/phpcs-standards/SmileLab --extensions=php src/
   - vendor/bin/phpmd src text vendor/smile/magento2-smilelab-phpmd/phpmd-rulesets/rulset.xml
-  - vendor/bin/phpunit -c Resources/tests/unit/phpunit.xml
+  - ${TRAVIS_BUILD_DIR}/../magento/vendor/bin/phpunit -c Resources/tests/unit/phpunit.xml
 
 after_failure:
     - sudo cat /var/log/apache2/apache-error.log
