--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,9 @@ before_install:
   - export ES_HOME=/usr/share/elasticsearch
   - curl -O https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-$ES_VERSION.deb
   - sudo dpkg -i --force-confnew elasticsearch-$ES_VERSION.deb
+  - yes | sudo $ES_HOME/bin/elasticsearch-plugin remove analysis-icu
   - yes | sudo $ES_HOME/bin/elasticsearch-plugin install analysis-icu
+  - yes | sudo $ES_HOME/bin/elasticsearch-plugin remove analysis-phonetic
   - yes | sudo $ES_HOME/bin/elasticsearch-plugin install analysis-phonetic
   - sudo chgrp elasticsearch /etc/default/elasticsearch -R
   - sudo service elasticsearch start
@@ -76,7 +78,7 @@ script:
   - vendor/bin/phpcs --standard=vendor/magento/marketplace-eqp/MEQP2 --severity=9 src/
   - vendor/bin/phpcs --standard=vendor/smile/magento2-smilelab-phpcs/phpcs-standards/SmileLab --extensions=php src/
   - vendor/bin/phpmd src text vendor/smile/magento2-smilelab-phpmd/phpmd-rulesets/rulset.xml
-  - ${TRAVIS_BUILD_DIR}/../magento/vendor/bin/phpunit -c Resources/tests/unit/phpunit.xml
+  - vendor/bin/phpunit -c Resources/tests/unit/phpunit.xml
 
 after_failure:
     - sudo cat /var/log/apache2/apache-error.log
